--- a/output/team.html
+++ b/output/team.html
@@ -8,14 +8,14 @@
     <title>My Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div id="teamHdr" class="col-12 jumbotron mb-3 team-heading">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
@@ -23,55 +23,81 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Dan</h2>
+                <div class="card employee-card shadow">
+    <div class="card-header text-center mgrHdr">
+        <h2 class="card-title">Ray</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:dan@email.com">dan@email.com</a></li>
-            <li class="list-group-item">Office number: 123</li>
+            <li class="list-group-item">ID: 44</li>
+            <li class="list-group-item">Email: <a href="mailto:kfnasf">kfnasf</a></li>
+            <li class="list-group-item">Office number: 313</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Ray</h2>
+    <div class="card-header text-center engrHdr">
+        <h2 class="card-title">Dan</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:ray@email.co">ray@email.co</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/raymond" target="_blank" rel="noopener noreferrer">raymond</a></li>
+            <li class="list-group-item">ID: 892</li>
+            <li class="list-group-item">Email: <a href="mailto:asafan">asafan</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/nksfe" target="_blank" rel="noopener noreferrer">nksfe</a></li>
         </ul>
     </div>
 </div>
 ,<div class="card employee-card">
-    <div class="card-header">
+    <div class="card-header text-center engrHdr">
         <h2 class="card-title">Esther</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:esther@email.com">esther@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/jungie" target="_blank" rel="noopener noreferrer">jungie</a></li>
+            <li class="list-group-item">Email: <a href="mailto:nkfa">nkfa</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/akjnsfa" target="_blank" rel="noopener noreferrer">akjnsfa</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">David</h2>
+    <div class="card-header text-center internHdr">
+        <h2 class="card-title">Halo</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:david@email.com">david@email.com</a></li>
-            <li class="list-group-item">School: Temple</li>
+            <li class="list-group-item">Email: <a href="mailto:kfasnfa">kfasnfa</a></li>
+            <li class="list-group-item">School: rgjbg</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header text-center internHdr">
+        <h2 class="card-title">Miley</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 5</li>
+            <li class="list-group-item">Email: <a href="mailto:aksna">aksna</a></li>
+            <li class="list-group-item">School: hdjhbv</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header text-center internHdr">
+        <h2 class="card-title">Ruby</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 6</li>
+            <li class="list-group-item">Email: <a href="mailto:kjdnfs">kjdnfs</a></li>
+            <li class="list-group-item">School: sdkjnf</li>
         </ul>
     </div>
 </div>
