--- a/output/team.html
+++ b/output/team.html
@@ -21,35 +21,35 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
-                <div class="card employee-card shadow">
+        <!-- <div class="row"> -->
+            <div class="team-area row d-flex justify-content-center">
+                <div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center mgrHdr">
         <h2 class="card-title">Ray</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 44</li>
-            <li class="list-group-item">Email: <a href="mailto:kfnasf">kfnasf</a></li>
-            <li class="list-group-item">Office number: 313</li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:askjfn">askjfn</a></li>
+            <li class="list-group-item">Office number: 213</li>
         </ul>
     </div>
 </div>
-<div class="card employee-card">
+<div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center engrHdr">
         <h2 class="card-title">Dan</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 892</li>
-            <li class="list-group-item">Email: <a href="mailto:asafan">asafan</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/nksfe" target="_blank" rel="noopener noreferrer">nksfe</a></li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:kasjnfas">kasjnfas</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/aksfn" target="_blank" rel="noopener noreferrer">aksfn</a></li>
         </ul>
     </div>
 </div>
-,<div class="card employee-card">
+,<div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center engrHdr">
         <h2 class="card-title">Esther</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
@@ -57,53 +57,53 @@
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:nkfa">nkfa</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/akjnsfa" target="_blank" rel="noopener noreferrer">akjnsfa</a></li>
+            <li class="list-group-item">Email: <a href="mailto:kjsfa">kjsfa</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/asjkfna" target="_blank" rel="noopener noreferrer">asjkfna</a></li>
         </ul>
     </div>
 </div>
-<div class="card employee-card">
-    <div class="card-header text-center internHdr">
-        <h2 class="card-title">Halo</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:kfasnfa">kfasnfa</a></li>
-            <li class="list-group-item">School: rgjbg</li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header text-center internHdr">
-        <h2 class="card-title">Miley</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:aksna">aksna</a></li>
-            <li class="list-group-item">School: hdjhbv</li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
+<div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center internHdr">
         <h2 class="card-title">Ruby</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:jasfnas">jasfnas</a></li>
+            <li class="list-group-item">School: akfsa</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card shadow-sm mx-3 mt-5">
+    <div class="card-header text-center internHdr">
+        <h2 class="card-title">Halo</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 5</li>
+            <li class="list-group-item">Email: <a href="mailto:aksf">aksf</a></li>
+            <li class="list-group-item">School: nafs</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card shadow-sm mx-3 mt-5">
+    <div class="card-header text-center internHdr">
+        <h2 class="card-title">Miley</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
             <li class="list-group-item">ID: 6</li>
-            <li class="list-group-item">Email: <a href="mailto:kjdnfs">kjdnfs</a></li>
-            <li class="list-group-item">School: sdkjnf</li>
+            <li class="list-group-item">Email: <a href="mailto:skjn">skjn</a></li>
+            <li class="list-group-item">School: sdkjns</li>
         </ul>
     </div>
 </div>
 
             </div>
-        </div>
+        <!-- </div> -->
     </div>
 </body>
 
