Edited css styles and changed icons

--- a/output/team.html
+++ b/output/team.html
@@ -8,6 +8,7 @@
     <title>My Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
@@ -21,89 +22,87 @@
         </div>
     </div>
     <div class="container">
-        <!-- <div class="row"> -->
-            <div class="team-area row d-flex justify-content-center">
-                <div class="card employee-card shadow-sm mx-3 mt-5">
+        <div class="team-area row d-flex justify-content-center">
+            <div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center mgrHdr">
         <h2 class="card-title">Ray</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+        <h3 class="card-title"><i class="fas fa-user mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:askjfn">askjfn</a></li>
-            <li class="list-group-item">Office number: 213</li>
+            <li class="list-group-item">Email: <a href="mailto:ray@email.com">ray@email.com</a></li>
+            <li class="list-group-item">Office number: 123</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center engrHdr">
         <h2 class="card-title">Dan</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        <h3 class="card-title"><i class="fas fa-cog mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:kasjnfas">kasjnfas</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/aksfn" target="_blank" rel="noopener noreferrer">aksfn</a></li>
+            <li class="list-group-item">Email: <a href="mailto:dan@email.com">dan@email.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/dansgh" target="_blank" rel="noopener noreferrer">dansgh</a></li>
         </ul>
     </div>
 </div>
 ,<div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center engrHdr">
         <h2 class="card-title">Esther</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        <h3 class="card-title"><i class="fas fa-cog mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:kjsfa">kjsfa</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/asjkfna" target="_blank" rel="noopener noreferrer">asjkfna</a></li>
+            <li class="list-group-item">Email: <a href="mailto:esther@email.com">esther@email.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/kasfas" target="_blank" rel="noopener noreferrer">kasfas</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center internHdr">
         <h2 class="card-title">Ruby</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+        <h3 class="card-title"><i class="fas fa-graduation-cap mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:jasfnas">jasfnas</a></li>
-            <li class="list-group-item">School: akfsa</li>
+            <li class="list-group-item">Email: <a href="mailto:ruby@email.com">ruby@email.com</a></li>
+            <li class="list-group-item">School: Temple</li>
         </ul>
     </div>
 </div>
 ,<div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center internHdr">
         <h2 class="card-title">Halo</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+        <h3 class="card-title"><i class="fas fa-graduation-cap mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:aksf">aksf</a></li>
-            <li class="list-group-item">School: nafs</li>
+            <li class="list-group-item">Email: <a href="mailto:halo@email.com">halo@email.com</a></li>
+            <li class="list-group-item">School: UPenn</li>
         </ul>
     </div>
 </div>
 ,<div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center internHdr">
         <h2 class="card-title">Miley</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+        <h3 class="card-title"><i class="fas fa-graduation-cap mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 6</li>
-            <li class="list-group-item">Email: <a href="mailto:skjn">skjn</a></li>
-            <li class="list-group-item">School: sdkjns</li>
+            <li class="list-group-item">Email: <a href="mailto:miley@email.com">miley@email.com</a></li>
+            <li class="list-group-item">School: Villanova</li>
         </ul>
     </div>
 </div>
 
-            </div>
-        <!-- </div> -->
+        </div>
     </div>
 </body>
 
