fixed bug with commas populating on webpage in between similar types of employees

--- a/output/team.html
+++ b/output/team.html
@@ -25,79 +25,66 @@
         <div class="team-area row d-flex justify-content-center">
             <div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center mgrHdr">
-        <h2 class="card-title">Ray</h2>
+        <h2 class="card-title">ehbjaf</h2>
         <h3 class="card-title"><i class="fas fa-user mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:ray@email.com">ray@email.com</a></li>
-            <li class="list-group-item">Office number: 123</li>
+            <li class="list-group-item">ID: ajk</li>
+            <li class="list-group-item">Email: <a href="mailto:asjknfa">asjknfa</a></li>
+            <li class="list-group-item">Office number: ajksnfas</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center engrHdr">
-        <h2 class="card-title">Dan</h2>
+        <h2 class="card-title">ajslfba</h2>
         <h3 class="card-title"><i class="fas fa-cog mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:dan@email.com">dan@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/dansgh" target="_blank" rel="noopener noreferrer">dansgh</a></li>
+            <li class="list-group-item">ID: ajsf;</li>
+            <li class="list-group-item">Email: <a href="mailto:akjsfa">akjsfa</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/jaksnf" target="_blank" rel="noopener noreferrer">jaksnf</a></li>
         </ul>
     </div>
 </div>
-,<div class="card employee-card shadow-sm mx-3 mt-5">
+<div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center engrHdr">
-        <h2 class="card-title">Esther</h2>
+        <h2 class="card-title">akjnsfa</h2>
         <h3 class="card-title"><i class="fas fa-cog mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:esther@email.com">esther@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/kasfas" target="_blank" rel="noopener noreferrer">kasfas</a></li>
+            <li class="list-group-item">ID: akjsnf</li>
+            <li class="list-group-item">Email: <a href="mailto:kjansf">kjansf</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/skjnfs" target="_blank" rel="noopener noreferrer">skjnfs</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center internHdr">
-        <h2 class="card-title">Ruby</h2>
+        <h2 class="card-title">bfljas</h2>
         <h3 class="card-title"><i class="fas fa-graduation-cap mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:ruby@email.com">ruby@email.com</a></li>
-            <li class="list-group-item">School: Temple</li>
+            <li class="list-group-item">ID: ankfj</li>
+            <li class="list-group-item">Email: <a href="mailto:kajnsf">kajnsf</a></li>
+            <li class="list-group-item">School: asf</li>
         </ul>
     </div>
 </div>
-,<div class="card employee-card shadow-sm mx-3 mt-5">
+<div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center internHdr">
-        <h2 class="card-title">Halo</h2>
+        <h2 class="card-title">aknjsf</h2>
         <h3 class="card-title"><i class="fas fa-graduation-cap mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:halo@email.com">halo@email.com</a></li>
-            <li class="list-group-item">School: UPenn</li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card shadow-sm mx-3 mt-5">
-    <div class="card-header text-center internHdr">
-        <h2 class="card-title">Miley</h2>
-        <h3 class="card-title"><i class="fas fa-graduation-cap mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 6</li>
-            <li class="list-group-item">Email: <a href="mailto:miley@email.com">miley@email.com</a></li>
-            <li class="list-group-item">School: Villanova</li>
+            <li class="list-group-item">ID: ajknf</li>
+            <li class="list-group-item">Email: <a href="mailto:kajsnf">kajsnf</a></li>
+            <li class="list-group-item">School: ankfjs</li>
         </ul>
     </div>
 </div>
