--- a/output/team.html
+++ b/output/team.html
@@ -25,66 +25,14 @@
         <div class="team-area row d-flex justify-content-center">
             <div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center mgrHdr">
-        <h2 class="card-title">Ray</h2>
+        <h2 class="card-title">1312</h2>
         <h3 class="card-title"><i class="fas fa-user mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 9</li>
-            <li class="list-group-item">Email: <a href="mailto:ray@email.com">ray@email.com</a></li>
-            <li class="list-group-item">Office number: 1234</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card shadow-sm mx-3 mt-5">
-    <div class="card-header text-center engrHdr">
-        <h2 class="card-title">Dan</h2>
-        <h3 class="card-title"><i class="fas fa-cog mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 8</li>
-            <li class="list-group-item">Email: <a href="mailto:dan@email.com">dan@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/ghdan" target="_blank" rel="noopener noreferrer">ghdan</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card shadow-sm mx-3 mt-5">
-    <div class="card-header text-center engrHdr">
-        <h2 class="card-title">Esther</h2>
-        <h3 class="card-title"><i class="fas fa-cog mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 7</li>
-            <li class="list-group-item">Email: <a href="mailto:esther@email.com">esther@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/jungjungie" target="_blank" rel="noopener noreferrer">jungjungie</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card shadow-sm mx-3 mt-5">
-    <div class="card-header text-center internHdr">
-        <h2 class="card-title">Halo</h2>
-        <h3 class="card-title"><i class="fas fa-graduation-cap mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 6</li>
-            <li class="list-group-item">Email: <a href="mailto:halo@email.com">halo@email.com</a></li>
-            <li class="list-group-item">School: UPenn</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card shadow-sm mx-3 mt-5">
-    <div class="card-header text-center internHdr">
-        <h2 class="card-title">Miley</h2>
-        <h3 class="card-title"><i class="fas fa-graduation-cap mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:miley@email.com">miley@email.com</a></li>
-            <li class="list-group-item">School: Villanova</li>
+            <li class="list-group-item">ID: 12</li>
+            <li class="list-group-item">Email: <a href="mailto:3412">3412</a></li>
+            <li class="list-group-item">Office number: 12421</li>
         </ul>
     </div>
 </div>
