--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,14 @@
         <div class="team-area row d-flex justify-content-center">
             <div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center mgrHdr">
-        <h2 class="card-title">1312</h2>
+        <h2 class="card-title">a</h2>
         <h3 class="card-title"><i class="fas fa-user mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 12</li>
-            <li class="list-group-item">Email: <a href="mailto:3412">3412</a></li>
-            <li class="list-group-item">Office number: 12421</li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:e@e.com">e@e.com</a></li>
+            <li class="list-group-item">Office number: Notrea</li>
         </ul>
     </div>
 </div>
