--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,66 @@
         <div class="team-area row d-flex justify-content-center">
             <div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center mgrHdr">
-        <h2 class="card-title">a</h2>
+        <h2 class="card-title">Ray </h2>
         <h3 class="card-title"><i class="fas fa-user mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:e@e.com">e@e.com</a></li>
-            <li class="list-group-item">Office number: Notrea</li>
+            <li class="list-group-item">Email: <a href="mailto:ray@email.com">ray@email.com</a></li>
+            <li class="list-group-item">Office number: Exec-10</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card shadow-sm mx-3 mt-5">
+    <div class="card-header text-center engrHdr">
+        <h2 class="card-title">Kim</h2>
+        <h3 class="card-title"><i class="fas fa-cog mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:kim@email.com">kim@email.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/kimgit" target="_blank" rel="noopener noreferrer">kimgit</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card shadow-sm mx-3 mt-5">
+    <div class="card-header text-center engrHdr">
+        <h2 class="card-title">Dan</h2>
+        <h3 class="card-title"><i class="fas fa-cog mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:dan@email.com">dan@email.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/dangit" target="_blank" rel="noopener noreferrer">dangit</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card shadow-sm mx-3 mt-5">
+    <div class="card-header text-center internHdr">
+        <h2 class="card-title">Jane</h2>
+        <h3 class="card-title"><i class="fas fa-graduation-cap mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:jane@email.com">jane@email.com</a></li>
+            <li class="list-group-item">School: NYU</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card shadow-sm mx-3 mt-5">
+    <div class="card-header text-center internHdr">
+        <h2 class="card-title">John</h2>
+        <h3 class="card-title"><i class="fas fa-graduation-cap mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 5</li>
+            <li class="list-group-item">Email: <a href="mailto:john@email.com">john@email.com</a></li>
+            <li class="list-group-item">School: Notre Dame</li>
         </ul>
     </div>
 </div>
